# spottr

./: LICENSE  README.md  main.py  pyproject.toml
docs/: llm.md
sample_logs/: application.log.analysis.json  high_error_rate.log.analysis.json  microservice_payment-service.log.analysis.json  microservice_user-service.log.analysis.json
src/spottr/: __init__.py
src/spottr/analysis/: analyzer.py  correlation.py  entailment.py  llm_analyzer.py  rule_engine.py  temporal.py
src/spottr/cli/: main.py
src/spottr/core/: models.py
src/spottr/parsers/: base.py  factory.py  json_parser.py  line_delimited.py
src/spottr/sample_data/: generator.py  test_runner.py
src/spottr/utils/: json_utils.py  validation.py
tests/: test_core.py
