[project]
name = "spottr"
version = "0.1.0"
description = "A library for detecting insights from application logs."
readme = "README.md"
authors = [{ name = "Kyle McLester", email = "kyle.mclester@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-json-logger>=3.3.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "coverage>=7.10.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
    "snakeviz>=2.2.2",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/spottr"]

[project.scripts]
spottr = "spottr.cli.main:main"
spottr-generate = "spottr.sample_data.generator:main"
spottr-test = "spottr.sample_data.test_runner:main"
